yaml_examples/test_yaml/with-files.yml
apiVersion: v1
kind: Pod
metadata:
  name: with-files
spec:
  containers:
  - name: with-files
    image: nginx
    volumeMounts:
    - name: temp-volume
      mountPath: /tmp
  volumes:
  - name: temp-volume
    emptyDir: {}
